--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>git연습</title>
   </head>
-  <body></body>
+  <body>
+    <h1>git 연습</h1>
+    <p>2024년 12월 6일 오후 2시 11분</p>
+  </body>
 </html>
